syntax = "proto3";

package giftduels.gift.v1;

import "giftduels/gift/v1/gift.proto";
import "giftduels/shared/v1/common.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/peterparker2005/giftduels/packages/protobuf-go/gen/giftduels/gift/v1;giftv1";

// Event emitted when a gift is received from a user to the system
message TelegramGiftReceivedEvent {
  shared.v1.GiftTelegramId telegram_gift_id = 2;
  google.protobuf.Timestamp deposit_date = 3;

  shared.v1.TelegramUserId owner_telegram_id = 4;

  // Gift information
  string title = 5;
  string slug = 6;
  repeated GiftAttribute attributes = 7;

  // Collectible information (if applicable)
  int32 collectible_id = 8;
  int32 upgrade_message_id = 9; // Used to transfer gift
}

message GiftWithdrawRequestedEvent {
  shared.v1.GiftId gift_id = 1;
  shared.v1.TelegramUserId owner_telegram_id = 2;
  shared.v1.GiftTelegramId telegram_gift_id = 5;
  int32 collectible_id = 3;
  int32 upgrade_message_id = 4;
  double price = 6;
}

// Event emitted when gift withdrawal fails and needs to be rolled back
message GiftWithdrawFailedEvent {
  shared.v1.GiftId gift_id = 1;
  shared.v1.TelegramUserId owner_telegram_id = 2;
  shared.v1.GiftTelegramId telegram_gift_id = 3;
  int32 collectible_id = 4;
  int32 upgrade_message_id = 5;
  double price = 6;
  string error_reason = 7; // Reason for withdrawal failure
  int32 attempts_made = 8; // Number of attempts made before failure
}
